<?xml version="1.0"?>
<package format="2">
  <name>tensorflow_ros_test</name>
  <version>2.1.0</version>
  <description>A test package for checking if tensorflow_ros works correctly.</description>

  <maintainer email="martin.pecka@cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend version_gte="3.1.0">tensorflow_ros_cpp</depend>

  <test_depend>rosunit</test_depend>
</package>
